Removed extra . in hbm.xml file names and changed from content to embded resource. (Migrated by TFS Migration Toolkit) (Updated by TFS to TFS Connector, server: http://1x:8080/, id 1601. )
git-tfs-id: [https://tfs.caes.ucdavis.edu:8088/tfs/DefaultCollection]$/ESRA/Trunk/Esra;C4996

--- a/CAESDO.Esra.Core/CAESDO.Esra.Core.csproj
+++ b/CAESDO.Esra.Core/CAESDO.Esra.Core.csproj
@@ -80,16 +80,16 @@
     <Compile Include="Utils\DesignByContract.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Domain\ApptType.hbm..xml" />
-    <Content Include="Domain\UCDEmployee.hbm..xml" />
-    <Content Include="Domain\SalaryStep.hbm..xml" />
-    <Content Include="Domain\SalaryGradeQuartiles.hbm..xml" />
-    <Content Include="Domain\SalaryScale.hbm..xml" />
-    <Content Include="Domain\Title.hbm..xml" />
-    <Content Include="Domain\SelectionType.hbm..xml" />
-    <Content Include="Domain\QuartileType.hbm..xml" />
-    <Content Include="Domain\PayRateType.hbm..xml" />
-    <Content Include="Domain\Department.hbm..xml" />
+    <EmbeddedResource Include="Domain\ApptType.hbm.xml" />
+    <EmbeddedResource Include="Domain\UCDEmployee.hbm.xml" />
+    <EmbeddedResource Include="Domain\SalaryStep.hbm.xml" />
+    <EmbeddedResource Include="Domain\SalaryGradeQuartiles.hbm.xml" />
+    <EmbeddedResource Include="Domain\SalaryScale.hbm.xml" />
+    <EmbeddedResource Include="Domain\Title.hbm..xml" />
+    <EmbeddedResource Include="Domain\SelectionType.hbm.xml" />
+    <EmbeddedResource Include="Domain\QuartileType.hbm.xml" />
+    <EmbeddedResource Include="Domain\PayRateType.hbm.xml" />
+    <EmbeddedResource Include="Domain\Department.hbm.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
