Fixed various NHibernate mapping issues. (Migrated by TFS Migration Toolkit) (Updated by TFS to TFS Connector, server: http://1x:8080/, id 1605. )
git-tfs-id: [https://tfs.caes.ucdavis.edu:8088/tfs/DefaultCollection]$/ESRA/Trunk/Esra;C5000

--- a/CAESDO.Esra.Core/CAESDO.Esra.Core.csproj
+++ b/CAESDO.Esra.Core/CAESDO.Esra.Core.csproj
@@ -85,7 +85,7 @@
     <EmbeddedResource Include="Domain\SalaryStep.hbm.xml" />
     <EmbeddedResource Include="Domain\SalaryGradeQuartiles.hbm.xml" />
     <EmbeddedResource Include="Domain\SalaryScale.hbm.xml" />
-    <EmbeddedResource Include="Domain\Title.hbm..xml" />
+    <EmbeddedResource Include="Domain\Title.hbm.xml" />
     <EmbeddedResource Include="Domain\SelectionType.hbm.xml" />
     <EmbeddedResource Include="Domain\QuartileType.hbm.xml" />
     <EmbeddedResource Include="Domain\PayRateType.hbm.xml" />
