Added SalaryScaleBLL and TitleBLL (Migrated by TFS Migration Toolkit) (Updated by TFS to TFS Connector, server: http://1x:8080/, id 1606. )
git-tfs-id: [https://tfs.caes.ucdavis.edu:8088/tfs/DefaultCollection]$/ESRA/Trunk/Esra;C5001

--- a/CAESDO.Esra.BLL/CAESDO.Esra.BLL.csproj
+++ b/CAESDO.Esra.BLL/CAESDO.Esra.BLL.csproj
@@ -44,6 +44,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppExceptionBLL.cs" />
+    <Compile Include="TitleBLL.cs" />
+    <Compile Include="SalaryScaleBLL.cs" />
     <Compile Include="EmployeeBLL.cs" />
     <Compile Include="GenericBLL.cs" />
     <Compile Include="GenericId.cs" />
