--- a/CAESDO.Esra.Core/CAESDO.Esra.Core.csproj
+++ b/CAESDO.Esra.Core/CAESDO.Esra.Core.csproj
@@ -91,6 +91,12 @@
     <EmbeddedResource Include="Domain\PayRateType.hbm.xml" />
     <EmbeddedResource Include="Domain\Department.hbm.xml" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Domain\Scenario.hbm.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Domain\SalaryReviewAnalysis.hbm.xml" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
