--- a/Esra.Web/Esra.Web.csproj
+++ b/Esra.Web/Esra.Web.csproj
@@ -65,7 +65,11 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Code\NHibernateSessionModule.cs" />
-    <Content Include="App_Code\ApplicationPage.cs" />
+    <Compile Include="App_Code\ApplicationPage.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Content Include="ErrorPage.aspx" />
+    <Content Include="SalaryReviewAnalysis.aspx" />
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -73,7 +77,21 @@
     <Compile Include="Default.aspx.designer.cs">
       <DependentUpon>Default.aspx</DependentUpon>
     </Compile>
+    <Compile Include="ErrorPage.aspx.cs">
+      <DependentUpon>ErrorPage.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ErrorPage.aspx.designer.cs">
+      <DependentUpon>ErrorPage.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SalaryReviewAnalysis.aspx.cs">
+      <DependentUpon>SalaryReviewAnalysis.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="SalaryReviewAnalysis.aspx.designer.cs">
+      <DependentUpon>SalaryReviewAnalysis.aspx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CAESDO.Esra.BLL\CAESDO.Esra.BLL.csproj">
