--- a/CAESDO.Esra.BLL/CAESDO.Esra.BLL.csproj
+++ b/CAESDO.Esra.BLL/CAESDO.Esra.BLL.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{6CA7EB51-4A95-4270-8A92-DA22BC67E4C4}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -44,6 +44,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppExceptionBLL.cs" />
+    <Compile Include="DepartmentBLL.cs" />
+    <Compile Include="SalaryReviewAnalysisBLL.cs" />
     <Compile Include="TitleBLL.cs" />
     <Compile Include="SalaryScaleBLL.cs" />
     <Compile Include="EmployeeBLL.cs" />
