--- a/CAESDO.Esra.Core/CAESDO.Esra.Core.csproj
+++ b/CAESDO.Esra.Core/CAESDO.Esra.Core.csproj
@@ -35,6 +35,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Castle.DynamicProxy, Version=1.1.5.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>W:\Devel\Shared Libraries\net 2.0\NHibernate\Castle.DynamicProxy.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Practices.EnterpriseLibrary.Validation, Version=3.1.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>W:\Devel\Shared Libraries\Microsoft Enterprise Library 3.1 - May 2007\Bin\Microsoft.Practices.EnterpriseLibrary.Validation.dll</HintPath>
@@ -59,6 +63,7 @@
     <Compile Include="DataInterfaces\IDaoFactory.cs" />
     <Compile Include="Domain\AppException.cs" />
     <Compile Include="Domain\ApptType.cs" />
+    <Compile Include="Domain\UCDEmlpoyeeID.cs" />
     <Compile Include="Domain\UCDEmployee.cs" />
     <Compile Include="Domain\DomainObject.cs" />
     <Compile Include="Domain\Exception.cs" />
