--- a/CAESDO.Esra.Core/CAESDO.Esra.Core.csproj
+++ b/CAESDO.Esra.Core/CAESDO.Esra.Core.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{0E6DB3B4-00A0-4C1F-9B33-C8412E349806}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -102,7 +102,7 @@
     <EmbeddedResource Include="Domain\SalaryReviewAnalysis.hbm.xml" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Domain\UCDEmployee.hbm..xml" />
+    <Content Include="Domain\UCDEmployee.hbm.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
