Removed superfluous GetEmployee methods, APIs and interfaces.  (Migrated by TFS Migration Toolkit) (Updated by TFS to TFS Connector, server: http://1x:8080/, id 1712. )
git-tfs-id: [https://tfs.caes.ucdavis.edu:8088/tfs/DefaultCollection]$/ESRA/Trunk/Esra;C5106

--- a/CAESDO.Esra.Core/CAESDO.Esra.Core.csproj
+++ b/CAESDO.Esra.Core/CAESDO.Esra.Core.csproj
@@ -63,6 +63,7 @@
     <Compile Include="DataInterfaces\IDaoFactory.cs" />
     <Compile Include="Domain\AppException.cs" />
     <Compile Include="Domain\ApptType.cs" />
+    <Compile Include="Domain\ESRSearchParameters.cs" />
     <Compile Include="Domain\UCDEmlpoyeeID.cs" />
     <Compile Include="Domain\UCDEmployee.cs" />
     <Compile Include="Domain\DomainObject.cs" />
@@ -102,7 +103,7 @@
     <EmbeddedResource Include="Domain\SalaryReviewAnalysis.hbm.xml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Domain\UCDEmployee.hbm.xml" />
+    <EmbeddedResource Include="Domain\UCDEmployee.hbm.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
