CAESDO.Esra.BLL:   Added USerBLL to project in order to get catbert webservice class to work properly.
CAESDO.Esra.Core.
  DataInterfaces:
    Added  IUserDao GetUserDao();  and 
	public interface IUserDao : IDao<User, int>
    	{
        	User GetUserByLogin(string LoginID);
        	User GetUserBySID(string SID);
    	}
	IUnitDao GetUnitDao();
	public interface IUnitDao : IDao<Unit, string> { }

    to IDaoFactory in order to use the catbert manager class.

  Domain:
    Added Lookups.cs and hbm.xml, User.cs, .hbm.xml in order to use the catbert manager class.

CAESDO.Esra.Data:
  Added public class UnitDao : AbstractNHibernateDao<Unit, string>, IUnitDao { } and public class UserDao : AbstractNHibernateDao<User, int>, IUserDao
    public IUnitDao GetUnitDao() { return new UnitDao(); }
    public IUserDao GetUserDao() { return new UserDao(); }

  to NHibernateDaoFactory.

Added views vLogin and vUsers to ESRA database for future use with role provider class.


Esra.Web:
  Added new LoginPage to project.
  App_Code:
    Added CAESDORoleProvider to project.
    Revised CatbertManager to return CatbertUsersRev.
    Added overidden class CatbertUsersRev in order to add full name to CatbertUsers.
  Added CatOps WebReference to CatbertWebservice.
  Revised SalaryReviewAnalysis page's ddlCreatedBy to use CatbertManager method as datasource.
  Web.config: added various settings for authentication and role provider.

 (Migrated by TFS Migration Toolkit) (Updated by TFS to TFS Connector, server: http://1x:8080/, id 1746. )

git-tfs-id: [https://tfs.caes.ucdavis.edu:8088/tfs/DefaultCollection]$/ESRA/Trunk/Esra;C5140

--- a/CAESDO.Esra.BLL/CAESDO.Esra.BLL.csproj
+++ b/CAESDO.Esra.BLL/CAESDO.Esra.BLL.csproj
@@ -40,12 +40,15 @@
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
     <Reference Include="System.Data" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppExceptionBLL.cs" />
+    <Compile Include="UserBLL.cs" />
     <Compile Include="DepartmentBLL.cs" />
     <Compile Include="SalaryReviewAnalysisBLL.cs" />
+    <Compile Include="SelectionTypeBLL.cs" />
     <Compile Include="TitleBLL.cs" />
     <Compile Include="SalaryScaleBLL.cs" />
     <Compile Include="EmployeeBLL.cs" />
