--- a/CAESDO.Esra.Core/CAESDO.Esra.Core.csproj
+++ b/CAESDO.Esra.Core/CAESDO.Esra.Core.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{0E6DB3B4-00A0-4C1F-9B33-C8412E349806}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -63,6 +63,8 @@
     <Compile Include="DataInterfaces\IDaoFactory.cs" />
     <Compile Include="Domain\AppException.cs" />
     <Compile Include="Domain\ApptType.cs" />
+    <Compile Include="Domain\Lookups.cs" />
+    <Compile Include="Domain\User.cs" />
     <Compile Include="Domain\ESRSearchParameters.cs" />
     <Compile Include="Domain\UCDEmlpoyeeID.cs" />
     <Compile Include="Domain\UCDEmployee.cs" />
@@ -104,6 +106,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Domain\UCDEmployee.hbm.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Domain\User.hbm.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Domain\Lookups.hbm.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
