Added new SalaryGradeQuartilesBLL.cs to project.
SalaryReviewAnalysisBLL.cs:
	Revised method public static IList<SalaryReviewAnalysis> GetAll(string employeeID, string reviewerLogin, string creationDate, string propertyName, bool ascending) 

to call daoFactory.GetSalaryReviewAnalysisDao().GetAllSalaryReviewAnalysis(propertyName, ascending) vs daoFactory.GetSalaryReviewAnalysisDao().GetAll(propertyName, 

ascending), as there was a runtime issue with the datasource knowing which GetAll method to bind to regardless of what attributes I set to help resolve the issue.
	Added new method public static IList<SalaryReviewAnalysis> GetAllSalaryReviewAnalysis(string propertyName, bool ascending) in order as a replacement for the 

previously overridden GetAll method.

SalaryScaleBLL.cs
	Added new method public static IList<SalaryScale> GetAllSalaryScale(string propertyName, bool ascending), which allow sorting by the Title.PayrollTitle 

relationship.
	Added new method public static void UpdateRecord(SalaryScale record) to allow updating a SalaryScale record.

IDaoFactory.cs:
	Added new method API IList<SalaryScale> GetAllSalaryScale(string propertyName, bool ascending) to interface ISalaryScaleDao.
	Revised method API new IList<SalaryReviewAnalysis> GetAll(string propertyName, bool ascending) to IList<SalaryReviewAnalysis> GetAllSalaryReviewAnalysis(string 

propertyName, bool ascending), since there was Datasource binding issues at runtime due to multiple methods with the same names and parameter lists.

SalaryScale.hbm.xml: Set TitleCode property to update="false and insert="false" so this field would be read-only.

NHibernateDaoFactory.cs:
	Added method public IList<SalaryScale> GetAllSalaryScale(string propertyName, bool ascending) to class SalaryScaleDao.
	SalaryReviewAnalysisDao:
		Revised method GetAll(string employeeID, string reviewerLogin, string creationDate, string propertyName, bool? ascending) line conjunction.Add(Expression.Eq("Employee.ID", employeeID)) to c

--- a/CAESDO.Esra.BLL/CAESDO.Esra.BLL.csproj
+++ b/CAESDO.Esra.BLL/CAESDO.Esra.BLL.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppExceptionBLL.cs" />
+    <Compile Include="SalaryGradeQuartilesBLL.cs" />
     <Compile Include="UserBLL.cs" />
     <Compile Include="DepartmentBLL.cs" />
     <Compile Include="SalaryReviewAnalysisBLL.cs" />
