--- a/CAESDO.Esra.Data/CAESDO.Esra.Data.csproj
+++ b/CAESDO.Esra.Data/CAESDO.Esra.Data.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{3D25136A-064D-4B0D-9E2D-7CA0D057DBF2}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -37,11 +37,11 @@
   <ItemGroup>
     <Reference Include="NHibernate, Version=1.2.0.3001, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>W:\Devel\Shared Libraries\net 2.0\NHibernate\NHibernate.dll</HintPath>
+      <HintPath>\\Agdean6\CRU\Devel\Shared Libraries\dlls\NHibernate.dll</HintPath>
     </Reference>
     <Reference Include="NHibernate.Mapping.Attributes, Version=1.2.0.4000, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>W:\Devel\Shared Libraries\net 2.0\NHibernate\NHibernate.Mapping.Attributes.dll</HintPath>
+      <HintPath>\\Agdean6\CRU\Devel\Shared Libraries\net 2.0\NHibernate\NHibernate.Mapping.Attributes.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
