--- a/Esra.Web/Esra.Web.csproj
+++ b/Esra.Web/Esra.Web.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{4A910EC7-8C1B-4F6A-8F0A-44B90644D661}</ProjectGuid>
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
@@ -133,6 +133,44 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="images\common\120px-Document_new_svg.png" />
+    <Content Include="images\common\Cancel-2.jpg" />
+    <Content Include="images\common\Cancel.png" />
+    <Content Include="images\common\cancel1.png" />
+    <Content Include="images\common\arrow_left.jpg" />
+    <Content Include="images\common\bigboxg_left.jpg" />
+    <Content Include="images\common\bigboxg_right.jpg" />
+    <Content Include="images\common\bigbox_left.jpg" />
+    <Content Include="images\common\bigbox_right.jpg" />
+    <Content Include="images\common\box_left.jpg" />
+    <Content Include="images\common\box_right.jpg" />
+    <Content Include="images\common\Bright.WebControls.Resources.Progress.gif" />
+    <Content Include="images\common\caes_logo.jpg" />
+    <Content Include="images\common\Calendar_scheduleHS.png" />
+    <Content Include="images\common\delete.png" />
+    <Content Include="images\common\disk4.jpg" />
+    <Content Include="images\common\divider.gif" />
+    <Content Include="images\common\document-new.png" />
+    <Content Include="images\common\document.gif" />
+    <Content Include="images\common\edit.png" />
+    <Content Include="images\common\edit_stripe.png" />
+    <Content Include="images\common\fieldsetbg.jpg" />
+    <Content Include="images\common\form_input.png" />
+    <Content Include="images\common\form_submit.jpg" />
+    <Content Include="images\common\form_textarea.png" />
+    <Content Include="images\common\mac_osx_floppy_disk_icon.gif" />
+    <Content Include="images\common\navddsm_bg.png" />
+    <Content Include="images\common\navdd_bg.png" />
+    <Content Include="images\common\navdd_leftbg.png" />
+    <Content Include="images\common\navdd_rightbg.png" />
+    <Content Include="images\common\nav_bg.jpg" />
+    <Content Include="images\common\new_file.png" />
+    <Content Include="images\common\pen.png" />
+    <Content Include="images\common\printer.gif" />
+    <Content Include="images\common\reload.png" />
+    <Content Include="images\common\spacer.gif" />
+    <Content Include="images\common\top_btn.jpg" />
+    <Content Include="images\common\update.png" />
     <Content Include="includes\Esra.css" />
     <Content Include="Esra.Master" />
     <Content Include="LoginPage.aspx" />
@@ -143,22 +181,37 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Accessibility" />
-    <Reference Include="AjaxControlToolkit, Version=3.0.20820.16598, Culture=neutral, PublicKeyToken=28f01b0e84b6d53e, processorArchitecture=MSIL" />
-    <Reference Include="CAESOps, Version=1.0.0.0, Culture=neutral, PublicKeyToken=667f3cb07abadf4b, processorArchitecture=MSIL" />
-    <Reference Include="Castle.DynamicProxy, Version=1.1.5.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL" />
-    <Reference Include="Iesi.Collections, Version=1.0.0.3, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL" />
+    <Reference Include="AjaxControlToolkit, Version=3.0.20820.16598, Culture=neutral, PublicKeyToken=28f01b0e84b6d53e, processorArchitecture=MSIL">
+      <HintPath>\\Agdean6\CRU\Devel\Shared Libraries\dlls\AjaxControlToolkit.dll</HintPath>
+    </Reference>
+    <Reference Include="CAESOps, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>\\Agdean6\CRU\Devel\Shared Libraries\dlls\CAESOps.dll</HintPath>
+    </Reference>
+    <Reference Include="Castle.DynamicProxy, Version=1.1.5.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <HintPath>\\Agdean6\CRU\Devel\Shared Libraries\dlls\Castle.DynamicProxy.dll</HintPath>
+    </Reference>
+    <Reference Include="Iesi.Collections, Version=1.0.0.3, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
+      <HintPath>\\Agdean6\CRU\Devel\Shared Libraries\dlls\Iesi.Collections.dll</HintPath>
+    </Reference>
     <Reference Include="Interop.MSXML2, Version=3.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>W:\Devel\Shared Libraries\dlls\Interop.MSXML2.dll</HintPath>
+      <HintPath>\\Agdean6\CRU\Devel\Shared Libraries\dlls\Interop.MSXML2.dll</HintPath>
     </Reference>
-    <Reference Include="log4net, Version=1.2.10.0, Culture=neutral, PublicKeyToken=1b44e1d426115821, processorArchitecture=MSIL" />
+    <Reference Include="log4net, Version=1.2.10.0, Culture=neutral, PublicKeyToken=1b44e1d426115821, processorArchitecture=MSIL">
+      <HintPath>\\Agdean6\CRU\Devel\Shared Libraries\dlls\log4net.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Practices.EnterpriseLibrary.Data, Version=3.1.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>W:\Devel\Shared Libraries\Microsoft Enterprise Library 3.1 - May 2007\Bin\Microsoft.Practices.EnterpriseLibrary.Data.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Practices.ObjectBuilder, Version=1.0.51206.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
-    <Reference Include="NHibernate, Version=1.2.0.3001, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL" />
-    <Reference Include="NHibernate.Mapping.Attributes, Version=1.2.0.4000, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL" />
+    <Reference Include="NHibernate, Version=1.2.0.3001, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
+      <HintPath>\\Agdean6\CRU\Devel\Shared Libraries\dlls\NHibernate.dll</HintPath>
+    </Reference>
+    <Reference Include="NHibernate.Mapping.Attributes, Version=1.2.0.4000, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
+      <HintPath>\\Agdean6\CRU\Devel\Shared Libraries\net 2.0\NHibernate\NHibernate.Mapping.Attributes.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -239,7 +292,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="images\common\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\VisualStudio\v9.0\WebApplications\Microsoft.WebApplication.targets" />
@@ -261,6 +313,9 @@
           <IISUrl>
           </IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
+          <UseCustomServer>False</UseCustomServer>
+          <CustomServerUrl>
+          </CustomServerUrl>
           <SaveServerSettingsInUserFile>False</SaveServerSettingsInUserFile>
         </WebProjectProperties>
       </FlavorProperties>
