Please see the last check in for comments, as I added the comments, but not the files. (Migrated by TFS Migration Toolkit) (Updated by TFS to TFS Connector, server: http://1x:8080/, id 1774. )(Edited by AESDEAN\sutaylor)
git-tfs-id: [https://tfs.caes.ucdavis.edu:8088/tfs/DefaultCollection]$/ESRA/Trunk/Esra;C5168

--- a/Esra.Web/Esra.Web.csproj
+++ b/Esra.Web/Esra.Web.csproj
@@ -58,14 +58,17 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_Code\NHibernateSessionModule.cs" />
+    <Compile Include="LoginPage.aspx.designer.cs">
+      <DependentUpon>LoginPage.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="App_Code\NHibernateSessionModule.cs" />
     <Compile Include="App_Code\ApplicationPage.cs">
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Content Include="ErrorPage.aspx" />
     <Content Include="SalaryReviewAnalysis.aspx" />
     <Compile Include="App_Code\CatbertManager.cs" />
-    <Content Include="App_Code\CAESDORoleProvider.cs" />
+    <Compile Include="App_Code\CAESDORoleProvider.cs" />
     <Compile Include="App_Code\CatbertUsersRev.cs" />
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
