--- a/Esra.Web/Esra.Web.csproj
+++ b/Esra.Web/Esra.Web.csproj
@@ -66,7 +66,7 @@
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Content Include="ErrorPage.aspx" />
-    <Content Include="SalaryReviewAnalysis.aspx" />
+    <Content Include="SalaryReviewAnalysisPage.aspx" />
     <Compile Include="App_Code\CatbertManager.cs" />
     <Compile Include="App_Code\CAESDORoleProvider.cs" />
     <Compile Include="App_Code\CatbertUsersRev.cs" />
@@ -101,12 +101,12 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
-    <Compile Include="SalaryReviewAnalysis.aspx.cs">
-      <DependentUpon>SalaryReviewAnalysis.aspx</DependentUpon>
+    <Compile Include="SalaryReviewAnalysisPage.aspx.cs">
+      <DependentUpon>SalaryReviewAnalysisPage.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="SalaryReviewAnalysis.aspx.designer.cs">
-      <DependentUpon>SalaryReviewAnalysis.aspx</DependentUpon>
+    <Compile Include="SalaryReviewAnalysisPage.aspx.designer.cs">
+      <DependentUpon>SalaryReviewAnalysisPage.aspx</DependentUpon>
     </Compile>
     <Compile Include="SalaryGradeQuartiles_UserInputForm.aspx.cs">
       <DependentUpon>SalaryGradeQuartiles_UserInputForm.aspx</DependentUpon>
