Added page titles to each page that lacked one.  Changed Test.aspx name to SalaryReviewAnalysisEditor.aspx (Migrated by TFS Migration Toolkit) (Updated by TFS to TFS Connector, server: http://1x:8080/, id 1809. )
git-tfs-id: [https://tfs.caes.ucdavis.edu:8088/tfs/DefaultCollection]$/ESRA/Trunk/Esra;C5195

--- a/Esra.Web/Esra.Web.csproj
+++ b/Esra.Web/Esra.Web.csproj
@@ -136,12 +136,12 @@
     <Compile Include="SalaryGradeQuartiles_UserInputForm.aspx.designer.cs">
       <DependentUpon>SalaryGradeQuartiles_UserInputForm.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Test.aspx.cs">
-      <DependentUpon>Test.aspx</DependentUpon>
+    <Compile Include="SalaryReviewAnalysisEditor.aspx.cs">
+      <DependentUpon>SalaryReviewAnalysisEditor.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Test.aspx.designer.cs">
-      <DependentUpon>Test.aspx</DependentUpon>
+    <Compile Include="SalaryReviewAnalysisEditor.aspx.designer.cs">
+      <DependentUpon>SalaryReviewAnalysisEditor.aspx</DependentUpon>
     </Compile>
     <Compile Include="TitleCode_UserInputForm.aspx.cs">
       <DependentUpon>TitleCode_UserInputForm.aspx</DependentUpon>
@@ -203,7 +203,7 @@
     <Content Include="Esra.Master" />
     <Content Include="LoginPage.aspx" />
     <Content Include="SalaryGradeQuartiles_UserInputForm.aspx" />
-    <Content Include="Test.aspx" />
+    <Content Include="SalaryReviewAnalysisEditor.aspx" />
     <Content Include="TitleCode_UserInputForm.aspx" />
     <None Include="Web References\CatOps\catbertwebservice.disco" />
   </ItemGroup>
