--- a/Esra.Web/Esra.Web.csproj
+++ b/Esra.Web/Esra.Web.csproj
@@ -58,6 +58,13 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ModalConfirm.aspx.cs">
+      <DependentUpon>ModalConfirm.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ModalConfirm.aspx.designer.cs">
+      <DependentUpon>ModalConfirm.aspx</DependentUpon>
+    </Compile>
     <Compile Include="UserAdminPage.aspx.cs">
       <DependentUpon>UserAdminPage.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -157,6 +164,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="images\common\loading.gif" />
+    <Content Include="includes\jsUpdateProgress.js" />
+    <Content Include="ModalConfirm.aspx" />
     <Content Include="UserAdminPage.aspx" />
     <Content Include="images\common\page-under-construction.jpg" />
     <Content Include="SalaryStep_UserInputForm.aspx" />
