Added logic for saving an existing Salary Review Analysis, including adding and deleting scenarios. SalaryReviewAnalysisBLL.cs: 	Added method update record.
SalaryReviewAnalysis.hbm.xml:
	Scenarios bag: Changed cascade from none to all.

Scenario.cs; .hbm.xml:
	Uncommented SalaryReviewAnalysisID method, as this is necessary in order to fetch previous list of scenarios before persisting changes.

SalaryReviewAnalysisPage.aspx: 
	Revised approved scenario binding to show ApprovedScenario.ScenarioNumber.

SalaryReviewAnalysisEditor.aspx; .aspx.cs:
	Revised DepartmentComments text field binding to set view state value OnTextChanged event, because there's no Repeater.FooterTemplate controls 

available, also changed init to Text='<%# ViewState[KEY_DEANS_OFFICE_COMMENTS] %>' 

OnTextChanged="tbSalaryReviewAnalysisDeansOfficeCommentsFooter_TextChanged" AutoPostBack="True">...
	Added KEY_DEANS_OFFICE_COMMENTS.
	Removed Dean's Office Comments text box setting from Page_Init, and added ViewState.Add(KEY_DEANS_OFFICE_COMMENTS, sra.DeansOfficeComments); to 

Page_Load method.
	Revised method protected void btnSubmitSalaryReviewAnalysis_Click(object sender, EventArgs e) to populate call 

SalaryReviewAnalysisBLL.UpdateRecord.
	Added method  protected void tbSalaryReviewAnalysisDeansOfficeCommentsFooter_TextChanged(object sender, EventArgs e) to update the 

DeansOfficeComment's ViewState param.
	Removed method protected string GetComments() as this was replaced using  ViewState[KEY_DEANS_OFFICE_COMMENTS].
 (Migrated by TFS Migration Toolkit) (Updated by TFS to TFS Connector, server: http://1x:8080/, id 1860. )

git-tfs-id: [https://tfs.caes.ucdavis.edu:8088/tfs/DefaultCollection]$/ESRA/Trunk/Esra;C5228

--- a/CAESDO.Esra.BLL/CAESDO.Esra.BLL.csproj
+++ b/CAESDO.Esra.BLL/CAESDO.Esra.BLL.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="AppExceptionBLL.cs" />
     <Compile Include="SalaryGradeQuartilesBLL.cs" />
+    <Compile Include="ScenarioBLL.cs" />
     <Compile Include="UserBLL.cs" />
     <Compile Include="DepartmentBLL.cs" />
     <Compile Include="SalaryReviewAnalysisBLL.cs" />
