EmployeeBLL.cs: 	Revised method public static IList<Employee> GetAllEmployeesForUser(string userID, bool isDepartmentUser, string propertyName, bool ascending,
string[] titleCodes, string pkEmployee, string[] departmentIDs) added logic to set propertyName to FullName if blank.

ApplicationPage.cs: Added string key constants: 
	protected static readonly string KEY_APPLIED_FILTERS = "AppliedFilters";
        protected static readonly string KEY_SORT_PROPERTY_NAME = "SortPropertyName"; 
        protected static readonly string KEY_ASCENDING = "Ascending";
        protected static readonly string KEY_EMPLOYEE_ID = "EmployeeID";
	Revised method protected void gridView_Sorting(GridView gridView, GridViewSortEventArgs e, ObjectDataSource objectDataSource, string pageName) 

to set the session's Session.Add(KEY_ASCENDING] and Session.Add(KEY_SORT_PROPERTY_NAME, propertyName). for later retrieval by excel export.
       

Added java script file for use with exporting excel file: exportToExcel.js

EmployeeSalaryComparisonPage.aspx; .aspx.cs:
	Removed KEY_EMPLOYEE_ID, as this was relocated to the ApplicationPage.
        Revised method protected string EmployeeID to default to Session[EmployeeID] if not present in query string.
	Added key constants:
		protected static readonly string KEY_SELECTED_DEPARTMENT_STRINGS = "selectedDepartmentStrings";
        	protected static readonly string KEY_SELECTED_DEPARTMENTS = "selectedDepartments";
        	protected static readonly string KEY_SELECTED_TITLE_STRINGS = "selectedTitleStrings";
        	protected static readonly string KEY_SELECTED_TITLES = "selectedTitles";
	Added [WebMethod] public static void ExportToExcel() for use with Excel exports.
	Revised method protected void ddlDepartment_SelectedIndexChanged(object sender, EventArgs e) to call ddlEmployee_ClearSelectedValue(); instead of having it try to modify ddlEmployee itself.
        Revised method protected Employee ddlEmployee_ClearSelectedValue() to set Session.Add(KEY_EMP

--- a/Esra.Web/Esra.Web.csproj
+++ b/Esra.Web/Esra.Web.csproj
@@ -58,6 +58,13 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ExportToExcel.aspx.cs">
+      <DependentUpon>ExportToExcel.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ExportToExcel.aspx.designer.cs">
+      <DependentUpon>ExportToExcel.aspx</DependentUpon>
+    </Compile>
     <Compile Include="ModalConfirm.aspx.cs">
       <DependentUpon>ModalConfirm.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -164,8 +171,10 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="ExportToExcel.aspx" />
     <Content Include="images\common\home_icon-full.jpg" />
     <Content Include="images\common\loading.gif" />
+    <Content Include="includes\exportToExcel.js" />
     <Content Include="includes\jsUpdateProgress.js" />
     <Content Include="ModalConfirm.aspx" />
     <Content Include="UserAdminPage.aspx" />
