SalaryScaleBLL.cs: 	Added method public static IList<SalaryScale> GetAllSalaryScaleWithSalarySteps(string propertyName, bool ascending) 	Added method public static bool HasSalarySteps(SalaryScale record) { return daoFactory.GetSalaryScaleDao().HasSalarySteps(record)         Added method public static IList<SalaryStep> GetSalarySteps(SalaryScale record) Added SalaryStepBLL.cs
IDaoFactory.cs; ISalaryScaleDao:
	Added IList<SalaryScale> GetAllSalaryScalesWithSalarySteps(string propertyName, bool ascending);
	Added bool HasSalarySteps(SalaryScale record);
        Added IList<SalaryStep> GetSalarySteps(SalaryScale record);

NHibernateDaoFactory.cs; SalaryScaleDao:
	Added method public IList<SalaryScale> GetAllSalaryScalesWithSalarySteps(string propertyName, bool ascending)
	Added method public bool HasSalarySteps(SalaryScale record)
	Added method public IList<SalaryStep> GetSalarySteps(SalaryScale record)

SalaryStep_UserInputForm.aspx; .aspx.cs:
	Begin "fleshing out" UI and logic. (Migrated by TFS Migration Toolkit) (Updated by TFS to TFS Connector, server: http://1x:8080/, id 1897. )

git-tfs-id: [https://tfs.caes.ucdavis.edu:8088/tfs/DefaultCollection]$/ESRA/Trunk/Esra;C5252

--- a/CAESDO.Esra.BLL/CAESDO.Esra.BLL.csproj
+++ b/CAESDO.Esra.BLL/CAESDO.Esra.BLL.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppExceptionBLL.cs" />
+    <Compile Include="SalaryStepBLL.cs" />
     <Compile Include="SalaryGradeQuartilesBLL.cs" />
     <Compile Include="ScenarioBLL.cs" />
     <Compile Include="UserBLL.cs" />
