Added collapse and expand images to common. Added Ajax CollapsePanelExtender to Salary Steps repeater. (Migrated by TFS Migration Toolkit) (Updated by TFS to TFS Connector, server: http://1x:8080/, id 1900. )
git-tfs-id: [https://tfs.caes.ucdavis.edu:8088/tfs/DefaultCollection]$/ESRA/Trunk/Esra;C5254

--- a/Esra.Web/Esra.Web.csproj
+++ b/Esra.Web/Esra.Web.csproj
@@ -179,6 +179,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="ExportToExcel.aspx" />
+    <Content Include="images\common\collapse_blue.jpg" />
+    <Content Include="images\common\expand_blue.jpg" />
     <Content Include="images\common\home_icon-full.jpg" />
     <Content Include="images\common\loading.gif" />
     <Content Include="images\common\Logout_Button.jpg" />
