TitleCode_UserInputForm.aspx; .aspx.cs: 	Added NumSalarySteps and Add Steps link. 	Revised method protected void btnClick_Command(object sender, CommandEventArgs e) to handle "add_steps" event and redirect to SalaryStep_UserInputForm.aspx page.
ApplicationPage.cs:
	Added KEY_TITLE_CODE and KEY_EFFECTIVE_DATE

Added new web page NewSalarySteps_UserInputForm.aspx

SalaryScaleBLL.cs
	Added method public static SalaryScale GetSalaryScale(string titleCode, string effectiveDate).
	Added public static SalaryScale GetSalaryScale(string titleCode, DateTime effectiveDate)
 (Migrated by TFS Migration Toolkit) (Updated by TFS to TFS Connector, server: http://1x:8080/, id 1928. )

git-tfs-id: [https://tfs.caes.ucdavis.edu:8088/tfs/DefaultCollection]$/ESRA/Trunk/Esra;C5265

--- a/Esra.Web/Esra.Web.csproj
+++ b/Esra.Web/Esra.Web.csproj
@@ -79,6 +79,13 @@
     <Compile Include="ModalConfirm.aspx.designer.cs">
       <DependentUpon>ModalConfirm.aspx</DependentUpon>
     </Compile>
+    <Compile Include="NewSalarySteps_UserInputForm.aspx.cs">
+      <DependentUpon>NewSalarySteps_UserInputForm.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="NewSalarySteps_UserInputForm.aspx.designer.cs">
+      <DependentUpon>NewSalarySteps_UserInputForm.aspx</DependentUpon>
+    </Compile>
     <Compile Include="UserAdminPage.aspx.cs">
       <DependentUpon>UserAdminPage.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -189,6 +196,7 @@
     <Content Include="includes\jsUpdateProgress.js" />
     <Content Include="LogoutPage.aspx" />
     <Content Include="ModalConfirm.aspx" />
+    <Content Include="NewSalarySteps_UserInputForm.aspx" />
     <Content Include="UserAdminPage.aspx" />
     <Content Include="images\common\page-under-construction.jpg" />
     <Content Include="SalaryStep_UserInputForm.aspx" />
