SalaryGradeQuartilesBLL: 	Added method public static void InsertRecord(SalaryGradeQuartiles record)
EmployeeSalaryComparisonPage.aspx:
	Moved College Average outside of !DepartmentUser display panel to allow visibility to all users.

SalaryReviewAnalysisEditor.aspx
	Moved College Average outside of !DepartmentUser display panel to allow visibility to all users.
	Added multi view, and then placed SalaryReviewAnalysis inside of new view.
	Added view to select either reclass or equity review.
	Changed data binding on ddlCriteria to ViewState["Criteria"] instead of ObjectDataSource, thus allowing me to 
correctly populate it in cases of reclass.

SalaryReviewAnalysisEditor.aspx.cs:
	Move page properties Titles, and Employees to top of page.
	Added page property Criteria.
	Revised method protected void Page_Load(object sender, EventArgs e) to handle setting the correct MultiView view based 
on whether or not review exists or is a new review.  Also modified logic, which populates the criteria list selections.
	Added method protected void ddlProposedTitleCode_SelectedIndexChanged(object sender, EventArgs e)
        and protected void btnDoEquityReview_Click(object sender, EventArgs e), which handle selection of proper criteria and 

titlecode depending whether proposed title code change or equity review button selection.

SalaryScaleBLL.cs:
	Revised method public static Dictionary<string, decimal?> GetCriteriaListItems(string titleCode) to not 
include quartile information for titles with Salary Steps.
	Created overloaded method public static Dictionary<string, decimal?> GetCriteriaListItems(string titleCode, DateTime 

effectiveDate), which allows passing of a effectiveDate.
	Revised public static Dictionary<string, decimal?> GetCriteriaListItems(string titleCode) to pass DateTime.Today to
Revised public static Dictionary<string, decimal?> GetCriteriaListItems(string titleCode, DateTime effectiveDate)


Reclass/Equity Review business rules:
	A user can only select Reclass

--- a/CAESDO.Esra.Core/CAESDO.Esra.Core.csproj
+++ b/CAESDO.Esra.Core/CAESDO.Esra.Core.csproj
@@ -39,9 +39,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>\\Agdean6\CRU\Devel\Shared Libraries\dlls\Castle.DynamicProxy.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.Practices.EnterpriseLibrary.Validation, Version=3.1.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+    <Reference Include="Microsoft.Practices.EnterpriseLibrary.Validation, Version=3.0.0.0, Culture=neutral, PublicKeyToken=667f3cb07abadf4b, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>W:\Devel\Shared Libraries\Microsoft Enterprise Library 3.1 - May 2007\Bin\Microsoft.Practices.EnterpriseLibrary.Validation.dll</HintPath>
+      <HintPath>W:\Devel\Shared Libraries\Enterprise Library 3.0\Microsoft.Practices.EnterpriseLibrary.Validation.dll</HintPath>
     </Reference>
     <Reference Include="NHibernate, Version=1.2.0.3001, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
